--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
@@ -54,5 +54,9 @@
     "prisma": "^5.13.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
-  }
+  },
+  "prisma": {
+  "schema": "./prisma/schema.prisma"
+}
+
 }
